# rbt-2d-sc-explorer

./: CONTRIBUTING.md  PROJECTS.md  README.md  environment.yml  setup.cfg  strain_scan_results.csv
.github/ISSUE_TEMPLATE/: measurement_report.yml  new_sample.yml
.github/workflows/: qe.yml  tests.yml
data/: results_template.csv
data/example_CIFs/: B9H6.cif  Li2NH.cif  Li4NH.cif
docs/: 01_fab_protocol_Li2NH.md  03_measurement_playbook.md
docs/SOPs/: BeC3H9_SOP.md
scripts/: bond_quantum.py  check_phonon_stability.py  generate_strain_scan.py  mock_qe_calculations.py  monitor_progress.py  parity_check.py  process_strain_scan.py  qe_builder.py  run_qe_docker.sh  tc_plot.ipynb
simulations/: METADATA.yaml  README.md
simulations/BeC3H9/ph/: ph.in
simulations/BeC3H9/relax/: relax.in
simulations/BeC3H9/strain_scan/+00/: README.md  ph.in  scf.in
simulations/BeC3H9/strain_scan/+01/: README.md  ph.in  scf.in
simulations/BeC3H9/strain_scan/+02/: README.md  ph.in  scf.in
simulations/BeC3H9/strain_scan/+03/: ph.in  (+2 more)
simulations/reference/: scf.in
simulations/strain_scan/: README.md  run_strain_scan.py
strain_+0pc/: dyn0  ph.out  scf.in  scf.out
strain_+1pc/: dyn0  ph.out  scf.in  scf.out
strain_+2pc/: dyn0  ph.in  ph.out  scf.in  scf.out
strain_+3pc/: dyn0  ph.out  scf.in  scf.out
strain_-1pc/: dyn0  ph.out  scf.in  scf.out
strain_-2pc/: dyn0  ph.out  scf.in  scf.out
strain_-3pc/: dyn0  ph.out  scf.in  scf.out
structures/: BeC3H9_optimized.cif  MgB2H4_optimized.cif
tests/: test_parity_bond.py  test_phonon_stability.py
tests/data/: mock.dyn
(+9 files in other folders)
