[metadata]
name = rbt-sc-explorer
version = 0.1.0
author = RBT Consortium
description = CLI toolkit for screening 2-D superconductors via the RBT parity rule
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/dvcoolster/rbt-2d-sc-explorer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    scipy
    matplotlib
    pandas
    pymatgen
    ase
    networkx
    click

[options.packages.find]
where = .
exclude = tests*

[options.entry_points]
console_scripts =
    rbt-parity = scripts.parity_check:main
    rbt-bond = scripts.bond_quantum:main
    rbt-qe-build = scripts.qe_builder:main
    rbt-phonon-check = scripts.check_phonon_stability:main

[options.extras_require]
dev =
    pytest
    pytest-cov 